<resources>
    <string name="app_name">Expenses</string>
    <string name="app_description">It is a free and open-source app, that I made so you could track expenses in a beautifully simple way.</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="add_tag">Add tag</string>
    <string name="add_expense_button">Add expense</string>
    <string name="amount">Amount</string>
    <string name="all_time">All time</string>
    <string name="application">Application</string>
    <string name="basic">Basic</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name_default">Default channel</string>
    <string name="channel_description_default">Channel for all types of notifications.</string>
    <string name="column_amount">Amount</string>
    <string name="column_currency">Currency</string>
    <string name="column_date">Date</string>
    <string name="column_notes">Notes</string>
    <string name="column_tags">Tags</string>
    <string name="column_title">Title</string>
    <string name="confirm">Confirm</string>
    <string name="contact_me">Contact me</string>
    <string name="contact_me_summary">Feedback is welcome!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="currency_abbreviation" translatable="false">%1$s\u0020\u0020%2$s</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="default_currency">Default currency</string>
    <string name="default_currency_summary" translatable="false">%1$s\u0020\u0020%2$s\u0020(%3$s)</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_expenses">Delete all expenses</string>
    <string name="delete_all_expenses_message">Are you sure you want to delete all expenses?</string>
    <string name="delete_expense_message">Are you sure you want to delete expense?</string>
    <string name="donate_app">Donate the app 💕</string>
    <string name="donate_app_summary">Help me to keep the app free forever.</string>
    <string name="donate_description">If you really like Expenses, consider supporting its development and maintenance by leaving a generous tip.</string>
    <string name="donate_with_price">Donate (%s)</string>
    <string name="donation_thanks_title">Thank you!</string>
    <string name="donation_thanks_message">Thank you for donating open-source software, you\'re awesome.</string>
    <string name="download_template">Download template</string>
    <string name="edit">Edit</string>
    <string name="expense_detail_title">Details</string>
    <string name="expense_deletion_failure_message">Expenses could not be deleted. Try again.</string>
    <string name="expense_deletion_success_message">All expenses deleted successfully.</string>
    <string name="expense_export_failure_message">Expenses could not be exported. Try again.</string>
    <string name="expense_export_success_message">Expenses exported successfully into Downloads folder.</string>
    <string name="expense_import_failure_message">Expenses could not be imported. Compare file with template.</string>
    <string name="expense_import_success_message">Expenses imported successfully from file.</string>
    <string name="expenses">Expenses</string>
    <string name="export_to_excel">Export to Excel (.xls)</string>
    <string name="filter">Filter</string>
    <string name="filter_tags">Filter tags</string>
    <string name="generous">Generous</string>
    <string name="import_from_excel">Import from Excel (.xls)</string>
    <string name="incompleted_feature_warning">Feature is not ready yet. Wait for the next application update.</string>
    <string name="light">Light</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="no_added_tags_message">No added tags. You can manage your tags on adding new expense screen.</string>
    <string name="no_expenses">No expenses</string>
    <string name="no_notes">No notes</string>
    <string name="no_tags">No tags</string>
    <string name="notes_title">Notes</string>
    <string name="notes_hint">Notes (optional)</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="purchase_unavailable">Purchase unavailable</string>
    <string name="rate_app">Rate the app</string>
    <string name="rate_app_summary">Share with others if you like the app.</string>
    <string name="review">Review</string>
    <string name="review_description">Describe the others how the app helps you to manage your budget on a daily basis. Let\'s unleash the potential of Expenses together.</string>
    <string name="save">Save</string>
    <string name="search_currency">Search currency</string>
    <string name="select_tags">Select tags</string>
    <string name="select_theme">Select theme</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up_or_sign_in">Sign up or sign in</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="simple_budget_tracker">Simple budget tracker</string>
    <string name="summary_title">You spent</string>
    <string name="support">Support</string>
    <string name="support_description">If you are interested, there are few ways you can support Expenses. Thanks for considering!</string>
    <string name="system_default">System default</string>
    <string name="ok">OK</string>
    <string name="theme">Theme</string>
    <string name="this_month">This month</string>
    <string name="this_week">This week</string>
    <string name="title_hint">Title</string>
    <string name="today">Today</string>
    <string name="translate_app">Translate the app</string>
    <string name="translate_app_summary">Let\'s make the app available for everyone.</string>
    <string name="translation_description">If you\'re interested in helping with translating the app to your language, please contact me. I\'d love to support as many as possible!\n\n\Currently supported: 🇺🇸 🇪🇸 🇵🇱</string>
    <string name="version">Version</string>
    <string name="view_source_code">View source code</string>
    <string name="view_source_code_on_github">View source code on Github</string>
    <string name="view_source_code_summary">200 ★ on Github</string>
    <string name="welcome_to_expenses">Welcome to Expenses</string>
    <string name="yes">Yes</string>

    <!-- Shared Preferences -->
    <string name="key_preferences" translatable="false">preferences</string>
    <string name="key_default_currency" translatable="false">default_currency</string>
    <string name="key_date_range" translatable="false">date_range</string>
    <string name="key_is_user_onboarded" translatable="false">is_user_onboarded</string>
    <string name="key_theme" translatable="false">theme</string>

</resources>
