<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary">

    <ImageButton
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="@dimen/spacing_big"
        android:src="@drawable/ic_clear_24dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/img_logo"
        app:layout_constraintBottom_toTopOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_to_expenses"
        android:textColor="@color/text_primary_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/textSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineCenter" />

    <TextView
        android:id="@+id/textSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:text="@string/simple_budget_tracker"
        android:textColor="@color/text_secondary_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinueWithGoogle"
        style="@style/Widget.Expenses.Button.Normal"
        android:layout_marginBottom="@dimen/spacing_xxlarge"
        android:text="@string/continue_with_google"
        android:textColor="@color/text_primary_dark"
        app:backgroundTint="@android:color/white"
        app:icon="@drawable/ic_google_colored_24dp"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>