<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerCurrencyAndAmount"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/primary"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textSymbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:drawableEnd="@drawable/ic_arrow_down_active_light_24dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/text_primary_light"
                app:layout_constraintBottom_toBottomOf="@+id/editTextAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextAmount"
                tools:text="USD" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xlarge"
                android:layout_marginEnd="@dimen/spacing_large"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:theme="@style/ThemeOverlay.Expenses.EditText.Dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textSymbol"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/editTextTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editTextTitle"
            app:srcCompat="@drawable/ic_title_inactive_dark_24dp" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="@string/title_hint"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageTitle"
            app:layout_constraintTop_toBottomOf="@id/containerCurrencyAndAmount" />

        <ImageView
            android:id="@+id/imageTags"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/containerTags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/containerTags"
            app:srcCompat="@drawable/ic_label_inactive_dark_24dp" />

        <FrameLayout
            android:id="@+id/containerTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageTags"
            app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

            <TextView
                android:id="@+id/text_select_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_large"
                android:text="@string/select_tags"
                android:textAppearance="@style/TextAppearance.Expenses.Subtitle1"
                android:textColor="@color/text_secondary_dark" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:paddingStart="@dimen/spacing_small"
                android:paddingEnd="@dimen/spacing_small"
                app:chipSpacing="@dimen/spacing_normal" />

        </FrameLayout>

        <ImageView
            android:id="@+id/imageDate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textDate"
            app:srcCompat="@drawable/ic_date_range_inactive_dark_24dp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_arrow_down_active_dark_24dp"
            android:paddingStart="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_large"
            android:textAppearance="@style/TextAppearance.Expenses.Subtitle1"
            android:textColor="@color/text_secondary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageDate"
            app:layout_constraintTop_toBottomOf="@id/containerTags"
            tools:text="Sun, 27 May 19:30" />

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/spacing_big"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_big"
            android:layout_marginBottom="@dimen/spacing_large"
            android:gravity="top"
            android:hint="@string/notes_hint"
            android:inputType="textCapSentences|textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>